# wikipy

./: .gitignore  README.md  pyproject.toml  ruff.toml
cli/: cli.py
db/: handlers.py  models.py  setup.py
docs/: wikimedia-api.md
libs/: logger.py
provider/: wikipedia.py
tests/: provider_wikipedia_test.py
wikipy/: __main__.py
